--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../scc/main.css">
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.cdnfonts.com/css/porter-sans-block" rel="stylesheet">
 </head>
@@ -32,84 +34,97 @@
         <section>
             <div class="text">
                 <h1 class="red-heading">Red Planet <br>ventures</h1>
-                <p class="h1">Explore the solar system</p>
+                <h2 class="h2">Explore the solar system</h2>
             </div>
        </section>
     </div>
- 
     <section>
-    <div class="frame">
-        <div class="div">
-          <img class="images" src="../assets/marsSliderClipped1.png">
-          <button class="button">Book Now</button>
-          <div class="heading">THE CLASSIC MARS
-            EXPERIENCE</div>
-          <p class="paragraph">Embark on a Mars vacation: red deserts, ancient
-            relics, and towering canyons await. Enjoy low gravity
+      <div class="bgColour">
+        <h1 class="about">FEATURED TRIP</h1>
+        <h2>The Classic Mars Experience</h2>
+        <div class="flexContainer">
+          <div class="flexitem2"><img src="./assets/marsSliderClipped1.png"></div>
+          <div class="flexitem2"><p class="paragraph">Embark on a Mars vacation: red deserts, ancient
+            relics, and towering canyons await. Enjoy low-gravity
             hiking, rover trips to Olympus Mons, and stargazing
             under Phobos and Deimos. Unforgettable adventures
             beckon on the rust colored landscapes of the Red
-            Planet.</p>
-            </div>
+            Planet</p>
+            <button name="button" type="button">Book Now</button>
         </div>
       </div>
-      <div class="frame2">
-        <div class="div2">
-          <img class="images2" src="../assets/spacSchuttles.png">
-          <div class="heading2"><p>OUR SHUTTLES</p>
-            TRAVEL IN STYLE WITH A
-            VARIETY OF SHUTTLES</div>
-          <p class="paragraph2">Select from our range of luxury, commercial, or
-            budget shuttles to fulfill your dream space
-            vacation. Experience unparalleled comfort and
-            convenience as you journey to your planet of
-            choice, ensuring an unforgettable and tailored
-            experience for every traveler.</p>
-            </div>
-        </div>
-      </div>
+      </section>
       <section>
-        <div class="frame3">
-            <div class="div3">
-              <img class="images3" src="">
-              <button class="button3">Book a Trip Now</button>
-              <div class="heading3"><p class="upcoming">UPCOMING TRIP SNEAK PEAK</p>Take A Look At Some Of Our<p class="headingtjie">
-                Upcoming Trips</p></div>
-              <p class="paragraph3"></p>
-                </div>
-            </div>
+        <div class="bgColour1">
+          <h1 class="about2">OUR SHUTTLES</h1>
+          <h3>Travel in Style with a<br>
+            variety of shuttles</h3>
+          <div class="flexContainer">
+            <div class="flexitem3"><p class="paragraph2">Select from our range of luxury, commercial, or
+              budget shuttles to fulfill your dream space
+              vacation. Experience unparalleled comfort and
+              convenience as you journey to your planet of
+              choice, ensuring an unforgettable and tailored
+              experience for every traveler.</p>
+              <div class="flexitem3"><img src="./assets/spacSchuttles.png"></div>
           </div>
-          <div class="frame4">
-            <div class="div4">
-              <img class="images4" src="./assets/Red_Planet_Logo.png">
-              <div class="heading4">Offering unforgettable trips to
-                explore planets in our solar system.</div>
-                <div><p class="co">Company</p></div>
-                <div class="under">Home<br>
-                  Flights<br>
-                  Contact Us</div>
-                  <p class="social">Social Media Links</p>
+        </div>
+        </section>
 
-                 <hr>
-
-               <p class="paragraph4">.</p>
-                </div>
-            </div>
+      <section>
+        <div class="frame">
+          <p class="sneakPeak">UPCOMING TRIPS SNEAK PEAK</p>
+           <p class="bigHeading">TAKE A LOOK AT SOME OF OUR
+            <p class="underHeading">UPCOMING TRIPS</p>
+          <div class="flexContainer">
+            <div class="flexitem1"><img src="./assets/upcomingTrip1.png"></div>
+            <div class="flexitem1"><img src="./assets/upcomingTrip2.png"></div>
+            <div class="flexitem1"><img src="./assets/upcomingTrip3.png"></div>
+            <div class="flexitem1"><img src="./assets/upcomingTrip4.png"></div>
           </div>
-
-
-
-
-
-
-
-
+          <p class="mars">Explore red deserts, ancient relics,<br>
+            low gravity adventures on Mars.</p>
+          <p  class="neptune">Experience Neptune's mysterious
+            depths in a celestial voyage.</p>
+          <p  class="jupiter">Embark on Jupiter and witness the
+            gas giant's majesty.</p>
+          <p  class="saturn">Explore Saturn's rings, moons, and
+            enigmatic beauty on an odyssey.</p>
+        </div>
+            <div class="smallHeading-container">
+              <p>The Classic Mars<br>
+                Experience</p>
+              <p>Neptune's Cosmic<br>
+                Dive</p>
+              <p>Jupiter: The Giant's<br>
+                Journey</p>
+              <p>Ring a Round a<br>
+                Saturn</p>
+            </div>
+        </div> 
     </section>
     <section>
-        <footer>
-           
-        </footer>
-</section>
+      <h1 class="h1Footer">Social Media Links</h1>
+      <h1 class="h2Footer">Company</h1>
+      <h2 class="company">Home<br>Flights<br>Contact Us</h2>
+      <div class="logo"><img src="../assets/Red_Planet_Logo.png"></div>
+      <h2 class="offering">Offering unforgettable trips to
+          explore planets in our solar
+          system.</h2>
+      <div class="flexContainerFooter">
+          <div class="flexItem4"><img src="../assets/smInstagram.png"></div>
+          <div class="flexItem4"><img src="../assets/smX.png"></div>
+          <div class="flexItem4"><img src="../assets/smTicktock.png"></div>
+          <div class="flexItem4"><img src="../assets/smFacebook.png"></div>
+        </div>
+        <hr>
+  </section>
+  <footer>
+      <div class="flexContainer4">
+      <p class="footer1">Terms & Conditions Privacy & Policy</p>
+      <p class="footer2"> All Rights Reserved &copy; Open Window 2024</p>
+  </div>
+  </footer>
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
 </body>
