--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../scc/about.css">
-   
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.cdnfonts.com/css/porter-sans-block" rel="stylesheet">
 </head>
@@ -24,7 +24,7 @@
                     </div>
                     <div class="right">
                         <div class="search-form">
-                            <input type="text" placeholder="Search for items...">
+                            <input type="text" placeholder="Search">
                             <i class="fas fa-shopping-cart"></i>
                         </div>
                     </div>
@@ -32,103 +32,86 @@
             </div>
     </section>
         <section>
-          <h1 class="h1">BOOK A FLIGHT</h1>
+          
         </section>
-    <section>
-        <div class="frame">
-            <div class="div">
-              <img class="images" src="../assets/flighhtMars.png">
-              <numbers class="numbers">+ 1 -</numbers>
-              <button class="button">Book Now</button>
-              <div class="heading">The Classic Mars Experience</div>
-              <p class="paragraph">Embark on a Mars vacation: red deserts, ancient relics, and towering
-                canyons await. Enjoy low-gravity hiking, rover trips to Olympus Mons, and
-                stargazing under Phobos and Deimos. Unforgettable adventures beckon
-                on the rust-colored landscapes of the Red Planet.</p>
-            </div>
+        <section>
+          <h1>RED PLANET VENTURES</h1>
+          <h2>ABOUT</h2>
+          <div class="flexContainer">
+          <div class="flexitem2"><p>Welcome to Red Planet Ventures, where we are dedicated to turning
+            dreams of interplanetary exploration into exhilarating realities. As a
+            premier provider of space tourism experiences, we specialize in
+            crafting meticulously curated journeys to the diverse planets within
+            our solar system. From the rugged terrain of Mars to the majestic
+            rings of Saturn, our expertly designed trips offer unparalleled
+            opportunities for discovery and adventure. With a commitment to
+            safety, innovation, and customer satisfaction, we strive to exceed
+            expectations and leave a lasting impression on every traveler who
+            embarks on a voyage with us. Join us as we push the boundaries of
+            exploration and unlock the mysteries of the cosmos with Red Planet
+            Ventures.</p>
           </div>
-    </section>
-          <section>
-          <div class="frame2">
-            <div class="div2">
-              <img class="images2" src="../assets/flightNeptune.png">
-              <numbers class="numbers2">+ 1 -</numbers>
-              <button class="button2">Book Now</button>
-              <div class="heading2">Neptune's Cosmic Dive</div>
-              <p class="paragraph2">Embark on a voyage to Neptune aboard the "Neptune Voyager." Witness
-                surreal vistas of swirling clouds and rings. Experience weightlessness and
-                explore frigid oceans. Engage in thrilling spacewalks, observe celestial
-                phenomena, and savor gourmet space cuisine. An unforgettable
-                adventure awaits, blending luxury with cosmic exploration..</p>
-            </div>
+          <div class="flexitem2"><img src="../assets/contactImage.png"></div>
           </div>
         </section>
+
         <section>
-            <div class="frame">
-                <div class="div">
-                  <img class="images" src="../assets/flightJupiter.png">
-                  <numbers class="numbers">+ 1 -</numbers>
-                  <button class="button">Book Now</button>
-                  <div class="heading">The Giant's Journey</div>
-                  <p class="paragraph">Embark on a Jupiter voyage aboard the "Jupiter Odyssey." Witness its
-                    majestic storms and swirling atmosphere. Dive into metallic hydrogen
-                    oceans. Explore its moons, each a world unto itself. Engage in gravity
-                    surfing, comet chasing, and space excursions. Experience cosmic wonder
-                    in luxury, blending exploration with adventure..</p>
-                </div>
-              </div>
+          <div class="flexItem1">
+            <div class="formContainer">
+                <form id="contact">
+                    <h3>SEND US A MESSAGE</h3>
+                    <fieldset>
+                        <input placeholder="Name" type="text" tabindex="1" required>
+                    </fieldset>
+                    <fieldset>
+                        <input placeholder="Email" type="text" tabindex="3" required>
+                    </fieldset>
+                    <fieldset>
+                      <input placeholder="Telephone" tabindex="7" type="tel">
+                  </fieldset>
+                    <fieldset>
+                        <textarea placeholder="Type your message" tabindex="6"></textarea>
+                    </fieldset>
+                    <fieldset>
+                      <button name="submitButton" type="submit" id="contactUsSubmit" tabindex="8">Submit</button>
+                  </fieldset>
+                </form>
+            </div>
+        </div>
+        <h1 class="h1Social">CONTACT US THROUGH OUR</h1>
+        <h2 class="h2Social">SOCIAL MEDIA PAGES<h2/>
+        <div class="flexContainer">
+            <div class="flexitem3"><img src="../assets/smFacebook.png"></div>
+            <div class="flexitem3"><img src="../assets/smInstagram.png"></div>
+            <div class="flexitem3"><img src="../assets/smX.png"></div>
+            <div class="flexitem3"><img src="../assets/smTicktock.png"></div>
+          </div>
+            <h1 class="h1Location">PHYSICAL LOCATION</h1>
+            <h2 class="h2Location">OR VISIT US AT OUR</h2>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17084.537936217443!2d28.264273813761875!3d-25.81737148008324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95676ae049fdb9%3A0xce632650d058e349!2sWingate%20Park%20Country%20Club.!5e0!3m2!1sen!2sza!4v1710337606744!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
         <section>
-            <div class="frame2">
-              <div class="div2">
-                <img class="images2" src="../assets/flightSaturn.png">
-                <numbers class="numbers2">+ 1 -</numbers>
-                <button class="button2">Book Now</button>
-                <div class="heading2">Ring Around a Saturn</div>
-                <p class="paragraph2">Embark on a voyage to Neptune aboard the "Neptune Voyager." Witness
-                  surreal vistas of swirling clouds and rings. Experience weightlessness and
-                  explore frigid oceans. Engage in thrilling spacewalks, observe celestial
-                  phenomena, and savor gourmet space cuisine. An unforgettable
-                  adventure awaits, blending luxury with cosmic exploration..</p>
+            <h1 class="h1Footer">Social Media Links</h1>
+            <h1 class="h2Footer">Company</h1>
+            <h2 class="company">Home<br>Flights<br>Contact Us</h2>
+            <div class="logo"><img src="../assets/Red_Planet_Logo.png"></div>
+            <h2 class="offering">Offering unforgettable trips to
+                explore planets in our solar
+                system.</h2>
+            <div class="flexContainerFooter">
+                <div class="flexItem4"><img src="../assets/smInstagram.png"></div>
+                <div class="flexItem4"><img src="../assets/smX.png"></div>
+                <div class="flexItem4"><img src="../assets/smTicktock.png"></div>
+                <div class="flexItem4"><img src="../assets/smFacebook.png"></div>
               </div>
-            </div>
-          </section>
-          <section>
-            <div class="frame">
-                <div class="div">
-                  <img class="images" src="../assets/flightUranus.png">
-                  <numbers class="numbers">+ 1 -</numbers>
-                  <button class="button">Book Now</button>
-                  <div class="heading">Uranus Uncharted</div>
-                  <p class="paragraph">Embark on a Jupiter voyage aboard the "Jupiter Odyssey." Witness its
-                    majestic storms and swirling atmosphere. Dive into metallic hydrogen
-                    oceans. Explore its moons, each a world unto itself. Engage in gravity
-                    surfing, comet chasing, and space excursions. Experience cosmic wonder
-                    in luxury, blending exploration with adventure..</p>
-                    
-                </div>
-              </div>
+              <hr>
         </section>
-        <section>
-            <div class="frame2">
-              <div class="div2">
-                <img class="images2" src="../assets/flightMoon.png">
-                <numbers class="numbers2">+ 1 -</numbers>
-                <button class="button2">Book Now</button>
-                <div class="heading2">Moonlight Meander</div>
-                <p class="paragraph2">Embark on a voyage to Neptune aboard the "Neptune Voyager." Witness
-                  surreal vistas of swirling clouds and rings. Experience weightlessness and
-                  explore frigid oceans. Engage in thrilling spacewalks, observe celestial
-                  phenomena, and savor gourmet space cuisine. An unforgettable
-                  adventure awaits, blending luxury with cosmic exploration..</p>
-              </div>
-            </div>
-          </section>
-
-    <footer>
-        <p> &copy; 2024 Your Website</p>
-    </footer>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
+        <footer>
+            <div class="flexContainer4">
+            <p class="footer1">Terms & Conditions Privacy & Policy</p>
+            <p class="footer2"> All Rights Reserved &copy; Open Window 2024</p>
+        </div>
+        </footer>
 </body>
 </html>
