--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
     <link rel="stylesheet" href="../scc/about.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -29,6 +29,8 @@
                         </div>
                     </div>
                 </div>
+                <div class="overImage">CONTACT<br>
+                            US</div>
             </div>
     </section>
         <section>
@@ -67,7 +69,7 @@
                         <input placeholder="Email" type="text" tabindex="3" required>
                     </fieldset>
                     <fieldset>
-                      <input placeholder="Telephone" tabindex="7" type="tel">
+                      <input placeholder="Telephone number" tabindex="7" type="tel">
                   </fieldset>
                     <fieldset>
                         <textarea placeholder="Type your message" tabindex="6"></textarea>
