--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="middle">
                     <a href class="active">Home</a>
                     <a href="/pages/flights.html">Flights</a>
-                    <a href="/pages/about.html">About</a>
+                    <a href="/pages/contact.html">Contact</a>
                 </div>
                 <div class="right">
                     <div class="search-form">
@@ -44,6 +44,7 @@
         <h2>The Classic Mars Experience</h2>
         <div class="flexContainer">
           <div class="flexitem2"><img src="./assets/marsSliderClipped1.png"></div>
+          <div class="middleRight"><img src="assets/arrowRightWhite.png" </div>
           <div class="flexitem2"><p class="paragraph">Embark on a Mars vacation: red deserts, ancient
             relics, and towering canyons await. Enjoy low-gravity
             hiking, rover trips to Olympus Mons, and stargazing
@@ -106,16 +107,20 @@
     <section>
       <h1 class="h1Footer">Social Media Links</h1>
       <h1 class="h2Footer">Company</h1>
-      <h2 class="company">Home<br>Flights<br>Contact Us</h2>
+
+      <h2 class="company"><a href ="http://127.0.0.1:5502/index.html">Home</a><br>
+        <a href ="http://127.0.0.1:5502/pages/flights.html">Flights</a><br>
+          <a href ="http://127.0.0.1:5502/pages/contact.html">Contact Us</a></h2>
+
       <div class="logo"><img src="../assets/Red_Planet_Logo.png"></div>
       <h2 class="offering">Offering unforgettable trips to
           explore planets in our solar
           system.</h2>
       <div class="flexContainerFooter">
-          <div class="flexItem4"><img src="../assets/smInstagram.png"></div>
-          <div class="flexItem4"><img src="../assets/smX.png"></div>
-          <div class="flexItem4"><img src="../assets/smTicktock.png"></div>
-          <div class="flexItem4"><img src="../assets/smFacebook.png"></div>
+        <div class="flexItem4"><a href="https://www.instagram.com/openwindowinstitute/"><img src="../assets/smInstagram.png"></a></div>
+        <div class="flexItem4"><a href="https://twitter.com/open_window_/"><img src="../assets/smX.png"></a></div>
+        <div class="flexItem4"><a href="https://www.tiktok.com/@open_window_/"><img src="../assets/smTicktock.png"></a></div>
+        <div class="flexItem4"><a href="https://www.facebook.com/theopenwindow/"><img src="../assets/smFacebook.png"></a></div>
         </div>
         <hr>
   </section>
