--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="../scc/about.css">
+    <link rel="stylesheet" href="../scc/contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.cdnfonts.com/css/porter-sans-block" rel="stylesheet">
+    <script src="../js/script.js"></script>
 </head>
 <body>
     <section>
@@ -18,9 +19,9 @@
                         <img src="../assets/Red_Planet_Logo.png" alt="Logo">
                     </div>
                     <div class="middle">
-                        <a href="../index.html" >Home</a>
+                        <a href="../index.html">Home</a>
                         <a href="../pages/flights.html">Flights</a>
-                        <a href class="active">About</a>
+                        <a href class="active">Contact</a>
                     </div>
                     <div class="right">
                         <div class="search-form">
@@ -63,20 +64,24 @@
                 <form id="contact">
                     <h3>SEND US A MESSAGE</h3>
                     <fieldset>
-                        <input placeholder="Name" type="text" tabindex="1" required>
+                        <input placeholder="Name" type="text" tabindex="1" id="name" required>
+                        <div class="error-message error"></div>
                     </fieldset>
                     <fieldset>
-                        <input placeholder="Email" type="text" tabindex="3" required>
+                        <input placeholder="Email" type="text" tabindex="3" id="email" required>
+                        <div class="error-message error"></div>
                     </fieldset>
                     <fieldset>
-                      <input placeholder="Telephone number" tabindex="7" type="tel">
-                  </fieldset>
-                    <fieldset>
-                        <textarea placeholder="Type your message" tabindex="6"></textarea>
+                        <input placeholder="Telephone number" tabindex="7" id="tel" type="tel">
+                        <div class="error-message error"></div>
                     </fieldset>
                     <fieldset>
-                      <button name="submitButton" type="submit" id="contactUsSubmit" tabindex="8">Submit</button>
-                  </fieldset>
+                        <textarea placeholder="Type your message" tabindex="6" id="message"></textarea>
+                        <div class="error-message error"></div>
+                    </fieldset>
+                    <fieldset>
+                        <button name="submitButton" type="submit" id="contactUsSubmit" tabindex="8">Submit</button>
+                    </fieldset>
                 </form>
             </div>
         </div>
@@ -96,16 +101,20 @@
         <section>
             <h1 class="h1Footer">Social Media Links</h1>
             <h1 class="h2Footer">Company</h1>
-            <h2 class="company">Home<br>Flights<br>Contact Us</h2>
+
+            <h2 class="company"><a href ="http://127.0.0.1:5502/index.html">Home<br></a>
+                <a href ="http://127.0.0.1:5502/pages/flights.html">Flights</a><br>
+                  <a href ="http://127.0.0.1:5502/pages/contact.html">Contact Us</a></h2>
+
             <div class="logo"><img src="../assets/Red_Planet_Logo.png"></div>
             <h2 class="offering">Offering unforgettable trips to
                 explore planets in our solar
                 system.</h2>
             <div class="flexContainerFooter">
-                <div class="flexItem4"><img src="../assets/smInstagram.png"></div>
-                <div class="flexItem4"><img src="../assets/smX.png"></div>
-                <div class="flexItem4"><img src="../assets/smTicktock.png"></div>
-                <div class="flexItem4"><img src="../assets/smFacebook.png"></div>
+                <div class="flexItem4"><a href="https://www.instagram.com/openwindowinstitute/"><img src="../assets/smInstagram.png"></a></div>
+                <div class="flexItem4"><a href="https://twitter.com/open_window_/"><img src="../assets/smX.png"></a></div>
+                <div class="flexItem4"><a href="https://www.tiktok.com/@open_window_/"><img src="../assets/smTicktock.png"></a></div>
+                <div class="flexItem4"><a href="https://www.facebook.com/theopenwindow/"><img src="../assets/smFacebook.png"></a></div>
               </div>
               <hr>
         </section>
