--- a/pages/flights.html
+++ b/pages/flights.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.cdnfonts.com/css/porter-sans-block" rel="stylesheet">
+    <script src="../js/script.js"></script>
 </head>
 <body>
     <section>
@@ -21,7 +22,7 @@
                     <div class="middle">
                         <a href="../index.html">Home</a>
                         <a href class="active">Flights</a>
-                        <a href="./about.html">About</a>
+                        <a href="./contact.html">Contact </a>
                     </div>
                     <div class="right">
                         <div class="search-form">
@@ -63,8 +64,12 @@
               canyons await. Enjoy low-gravity hiking, rover trips to Olympus Mons, and
               stargazing under Phobos and Deimos. Unforgettable adventures beckon
               on the rust-colored landscapes of the Red Planet.</p>
-              <button name="button" type="button">Book Now</button>
-              <div class="buttonSmall" type="Button">+ 1 -</div>
+              <button name="button" type="button" class="Submit">Book Now</button>
+              <div class="buttonSmall">
+                <button id="decrement" class="decres" >−</button>
+                <span id="number">0</span>
+                <button id="increment" class="incres" >+</button>
+            </div>
               <div>
               <hr class="line">
               <p class="sku" >SKU <p class="afterLine">: SS001</p></p>
@@ -96,8 +101,12 @@
             explore frigid oceans. Engage in thrilling spacewalks, observe celestial
             phenomena, and savor gourmet space cuisine. An unforgettable
             adventure awaits, blending luxury with cosmic exploration.</p>
-            <button name="button" type="button">Book Now</button>
-              <div class="buttonSmall2" type="Button">+ 1 -</div>
+            <button name="button" type="button" class="Submit">Book Now</button>
+            <div class="buttonSmall2">
+              <button id="decrement" class="decres" >−</button>
+              <span id="number">0</span>
+              <button id="increment" class="incres" >+</button>
+          </div>
               <div>
                 <hr class="line">
                 <p class="sku" >SKU <p class="afterLine">: SS405</p></p>
@@ -111,6 +120,7 @@
       </section>
       <div class="bgColour1">
           <h1>The Giant's Journey</h1>
+          <div class="vertical-line"></div>
           <h1 class="mony">R65,000.00</h1>
           <p class="review">36 Customer Review</p>
           <div class="icons">
@@ -127,8 +137,12 @@
               oceans. Explore its moons, each a world unto itself. Engage in gravity
               surfing, comet chasing, and space excursions. Experience cosmic wonder
               in luxury, blending exploration with adventure.</p>
-              <button name="button" type="button">Book Now</button>
-              <div class="buttonSmall" type="Button">+ 1 -</div>
+              <button name="button" type="button" class="Submit">Book Now</button>
+              <div class="buttonSmall">
+                <button id="decrement" class="decres" >−</button>
+                <span id="number">0</span>
+                <button id="increment" class="incres" >+</button>
+            </div>
               <div>
                 <hr class="line">
                 <p class="sku" >SKU <p class="afterLine">:SS606</p></p>
@@ -144,6 +158,7 @@
         <section>
           <div class="bgColour">
            <h2>Ring Around a Saturn</h2>
+           <div class="vertical-line"></div>
            <h1 class="monyB">R40,000.00</h1>
            <p class="review">36 Customer Review</p>
           <div class="icons">
@@ -161,8 +176,12 @@
               expeditions and cave exploration. Experience the wonders of the cosmos
               amidst luxurious accommodations, where the thrill of discovery
               intertwines seamlessly with the excitement of adventure.</p>
-              <button name="button" type="button">Book Now</button>
-              <div class="buttonSmall2" type="Button">+ 1 -</div>
+              <button name="button" type="button" class="Submit">Book Now</button>
+              <div class="buttonSmall2">
+                <button id="decrement" class="decres" >−</button>
+                <span id="number">0</span>
+                <button id="increment" class="incres" >+</button>
+            </div>
               <div>
                 <hr class="line">
                 <p class="sku" >SKU <p class="afterLine">:SS333</p></p>
@@ -178,6 +197,7 @@
         <section>
           <div class="bgColour1">
           <h1>Uranus Uncharted</h1>
+          <div class="vertical-line"></div>
           <h1 class="mony">R50,000.00</h1>
           <p class="review">36 Customer Review</p>
           <div class="icons">
@@ -195,8 +215,12 @@
               yourself in celestial photography workshops. With luxury
               accommodations and expert guides, discover the wonders of Uranus in a
               journey of a lifetime</p>
-              <button name="button" type="button">Book Now</button>
-              <div class="buttonSmall" type="Button">+ 1 -</div>
+              <button name="button" type="button" class="Submit">Book Now</button>
+              <div class="buttonSmall">
+                <button id="decrement" class="decres" >−</button>
+                <span id="number">0</span>
+                <button id="increment" class="incres" >+</button>
+            </div>
               <div>
                 <hr class="line">
                 <p class="sku" >SKU <p class="afterLine">:SS735</p></p>
@@ -212,6 +236,7 @@
         <section>
           <div class="bgColour">
             <h2>Moonlight Meander</h2>
+            <div class="vertical-line"></div>
             <h1 class="monyB">R15,000.00</h1>
             <p class="review">36 Customer Review</p>
           <div class="icons">
@@ -228,8 +253,12 @@
               breathtaking views of Earthrise, and stargazing under the moons serene
               glow. Immerse yourself in luxury accommodations amidst the tranquility
               of space.</p>
-              <button name="button" type="button">Book Now</button>
-              <div class="buttonSmall2" type="Button">+ 1 -</div>
+              <button name="button" type="button" class="Submit">Book Now</button>
+              <div class="buttonSmall2">
+                <button id="decrement" class="decres" >−</button>
+                <span id="number">0</span>
+                <button id="increment" class="incres" >+</button>
+            </div>
               <div>
                 <hr class="line">
                 <p class="sku" >SKU <p class="afterLine">:SS451</p></p>
@@ -245,17 +274,21 @@
         <section>
           <h1 class="h1Footer">Social Media Links</h1>
           <h1 class="h2Footer">Company</h1>
-          <h2 class="company">Home<br>Flights<br>Contact Us</h2>
+
+          <h2 class="company"><a href ="http://127.0.0.1:5502/index.html">Home<br></a>
+            <a href ="http://127.0.0.1:5502/pages/flights.html">Flights</a><br>
+              <a href ="http://127.0.0.1:5502/pages/contact.html">Contact Us</a></h2>
+
           <div class="logo"><img src="../assets/Red_Planet_Logo.png"></div>
           <h2 class="offering">Offering unforgettable trips to
               explore planets in our solar
               system.</h2>
           <div class="flexContainerFooter">
-              <div class="flexItem4"><img src="../assets/smInstagram.png"></div>
-              <div class="flexItem4"><img src="../assets/smX.png"></div>
-              <div class="flexItem4"><img src="../assets/smTicktock.png"></div>
-              <div class="flexItem4"><img src="../assets/smFacebook.png"></div>
-            </div>
+            <div class="flexItem4"><a href="https://www.instagram.com/openwindowinstitute/"><img src="../assets/smInstagram.png"></a></div>
+            <div class="flexItem4"><a href="https://twitter.com/open_window_/"><img src="../assets/smX.png"></a></div>
+            <div class="flexItem4"><a href="https://www.tiktok.com/@open_window_/"><img src="../assets/smTicktock.png"></a></div>
+            <div class="flexItem4"><a href="https://www.facebook.com/theopenwindow/"><img src="../assets/smFacebook.png"></a></div>
+        </div>
             <hr>
       </section>
       
