--- a/pages/contact.html
+++ b/pages/contact.html
@@ -102,9 +102,9 @@
             <h1 class="h1Footer">Social Media Links</h1>
             <h1 class="h2Footer">Company</h1>
 
-            <h2 class="company"><a href ="http://127.0.0.1:5502/index.html">Home<br></a>
-                <a href ="http://127.0.0.1:5502/pages/flights.html">Flights</a><br>
-                  <a href ="http://127.0.0.1:5502/pages/contact.html">Contact Us</a></h2>
+            <a href ="http://127.0.0.1:5502/index.html" class="two">Home</a><br>
+            <a href ="http://127.0.0.1:5502/pages/flights.html" class="two">Flights</a><br>
+            <a href ="http://127.0.0.1:5502/pages/contact.html" class="two">Contact Us</a>
 
             <div class="logo"><img src="../assets/Red_Planet_Logo.png"></div>
             <h2 class="offering">Offering unforgettable trips to
